--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run:
           name: Installing Dependencies
           command: |
-            if [ -f requirements.txt ] then
+            if [ -f requirements.txt ]; then
             pip install -r requirements.txt
       - run:
           name: Check Python Version
@@ -28,21 +28,21 @@ jobs:
       - run:
           name: Installing Dependencies
           command: |
-            if [ -f requirements.txt ] then
+            if [ -f requirements.txt ]; then
             pip install -r requirements.txt
       - run:
           name: Run Tests
           command: python manage.py test
 
-    # Deploy Job
-    deploy:
-      docker:
-        - image: cimg/python:3.11.5
-      steps:
-        - checkout
-        - run:
-          name: Deploy Application
-          command: echo "Now it's deploying ..."
+  # Deploy Job
+  deploy:
+    docker:
+      - image: cimg/python:3.11.5
+    steps:
+      - checkout
+      - run:
+        name: Deploy Application
+        command: echo "Now it's deploying ..."
 
 
 workflows:
@@ -50,14 +50,22 @@ workflows:
   build-test-deploy:
     jobs:
       - build
+          filters:
+            branches:
+              only: main
+
       - test:
           requires:
             - build
+          filters:
+            branches:
+              only: main
+          
       - deploy:
           requires:
             - test
-
-    filters:
-      branches:
-        only: main
+          filters:
+            branches:
+              only: main
+              
 
