--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ workflows:
   version: 2
   build-test-deploy:
     jobs:
-      - build
+      - build:
           filters:
             branches:
               only: main
@@ -67,5 +67,5 @@ workflows:
           filters:
             branches:
               only: main
-              
+
 
