--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,10 @@ jobs:
 workflows:
   build-test-deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              only: main
 
 # workflows:
 #   build-test-deploy:
