--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,17 +7,17 @@ jobs:
       - image: cimg/python:3.11.5
     steps:
       - checkout
-      - run:
-          name: Installing Dependencies
-          command: |
-            if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
+      # - run:
+      #     name: Installing Dependencies
+      #     command: |
+      #       if [ -f requirements.txt ]; then
+      #       pip install -r requirements.txt
       - run:
           name: Check Python Version
           command: python --version
-      - run:
-          name: Check Installed Dependencies
-          command: pip list
+      # - run:
+      #     name: Check Installed Dependencies
+      #     command: pip list
 
   # Test Job
   test:
@@ -48,10 +48,10 @@ jobs:
 workflows:
   build-test-deploy:
     jobs:
-      - build:
-          filters:
-            branches:
-              only: main
+      - build
+      - test:
+          requires:
+            - build
 
 # workflows:
 #   build-test-deploy:
