--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,14 +25,17 @@ jobs:
       - image: cimg/python:3.11.5
     steps:
       - checkout
-      - run:
-          name: Installing Dependencies
-          command: |
-            if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-      - run:
-          name: Run Tests
-          command: python manage.py test
+      # - run:
+      #     name: Installing Dependencies
+      #     command: |
+      #       if [ -f requirements.txt ]; then
+      #       pip install -r requirements.txt
+      # - run:
+      #     name: Run Tests
+      #     command: python manage.py test
+        - run:
+            name: Test commands in here
+            command: echo "Run test in here"
 
   # Deploy Job
   deploy:
@@ -50,6 +53,9 @@ workflows:
     jobs:
       - build
       - test:
+          requires:
+            - build
+      - deploy:
           requires:
             - build
 
