--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ workflows:
             - build
       - deploy:
           requires:
-            - build
+            - test
 
 # workflows:
 #   build-test-deploy:
