--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,11 @@ jobs:
 workflows:
   build-test-deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              only: main
+              
       - test:
           requires:
             - build
