--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
 workflows:
   build-test-deploy:
     jobs:
-      - build:
+      - build
           filters:
             branches:
               only: main
