--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,14 @@ jobs:
       - image: cimg/python:3.11.5
     steps:
       - checkout
-      # - run:
-      #     name: Installing Dependencies
-      #     command: |
-      #       if [ -f requirements.txt ]; then
-      #       pip install -r requirements.txt
       - run:
           name: Check Python Version
           command: python --version
+      - run:
+          name: Installing Dependencies
+          command: |
+            if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
       # - run:
       #     name: Check Installed Dependencies
       #     command: pip list
