--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
             if [ -f requirements.txt ]; then
             pip install -r requirements.txt
             fi
-      # - run:
-      #     name: Check Installed Dependencies
-      #     command: pip list
+      - run:
+          name: Check Installed Dependencies
+          command: pip list
 
   # Test Job
   test:
@@ -27,16 +27,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Test commands in here
-          command: echo "Run test in here"
-      # - run:
-      #     name: Installing Dependencies
-      #     command: |
-      #       if [ -f requirements.txt ]; then
-      #       pip install -r requirements.txt
-      # - run:
-      #     name: Run Tests
-      #     command: python manage.py test
+          name: Installing Dependencies
+          command: |
+            if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+            fi
+      - run:
+          name: Run Tests
+          command: python manage.py test
 
   # Deploy Job
   deploy:
