--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,10 @@ jobs:
 workflows:
   build-test-deploy:
     jobs:
-      - build
+      - build:
+        filters:
+          branches:
+            only: main
       - test:
           requires:
             - build
